[package]
name = "pawn-pal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shakmaty = "0.27.0"
urlencoding = "2.1.3"

[profile.release]
panic = "abort"
