[package]
name = "pawn-pal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
shakmaty = "0.29.4"
urlencoding = "2.1.3"

[profile.release]
panic = "abort"
